[tool.poetry]
name = "PhenoGenius_cli"
version = "1.1.2"
description = ""
authors = ["kevin.yauy <kevin.yauy@chu-montpellier.fr>"]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=1.3.0"
ujson = "^5.4.0"
numpy = ">=1.24,<2.1"
scikit-learn = "^1.5.1"
pandarallel = "^1.6.5"
click = "^8.1.7"
pyarrow = "^17.0.0"
pronto = "^2.5.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
